Fix right pane flex box horizontal overflow

--- a/my-app/src/components/grid/Grid.css
+++ b/my-app/src/components/grid/Grid.css
@@ -9,7 +9,7 @@ hr.grid--divider {
 }
 
 table {
-    overflow-y:auto;
+    overflow:auto;
     display:block;
     width: 100%;
     border-collapse: collapse;
