--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -51,6 +51,7 @@ right-pane {
     padding: 17px;
     display: flex;
     flex-direction: column;
+    min-width: 0;
 }
 
 .mobile-full-width {
